--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
     "react-router": "^7.1.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1",
+    "semver": "^7.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
